just changed setting

--- a/Home_work/Final Assignment/Final_Neat_WorkBook.ipynb
+++ b/Home_work/Final Assignment/Final_Neat_WorkBook.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "981b4bcc",
+   "metadata": {},
+   "source": [
+    "# Participant\n",
+    "Title= Student\\\n",
+    "Name= \"Azeem Javed\"\\\n",
+    "email = \"azeem_.mmg_@gmail.com\"\\\n",
+    "whatsapp = \"0092306-5626700\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cdae3f3a",
    "metadata": {},
    "source": [
-    "# BASICS (Before Starting Chilla)"
+    "#### BASICS (Before Starting Chilla)"
    ]
   },
   {
@@ -26,7 +38,7 @@
    "id": "16d5328c",
    "metadata": {},
    "source": [
-    "# 02_operators\n",
+    "#### 02_operators\n",
     "- spaces are meaningless in operators\n",
     "- sequences of operators run will always be like (pemdas (parenthesis exponents multiply divide addition subtraction)\n",
     "- (sequence will be left to right mdas)\n",
@@ -46,15 +58,14 @@
    "id": "ab96ade5",
    "metadata": {},
    "source": [
-    "# 03_Strings\n",
-    "- # any text in excel (single/double commas or 3 qutation marks are strings)\n",
-    "    #print(\"hello world\")\n",
-    "    #print(\"we are lreaning python with ammar\")\n",
-    "    #print('test for single quotes')\n",
-    "    #print(\"test for double quotes\")\n",
-    "    #print('''test for triple quotes''') \n",
-    "\n",
-    "    print(\"  what's up  ?\")"
+    "##### 03_Strings\n",
+    "1. any text in excel (single/double commas or 3 qutation marks are strings)\n",
+    "2. print(\"hello world\")\n",
+    "3. print(\"we are lreaning python with ammar\")\n",
+    "3. print('test for single quotes')\n",
+    "5. print(\"test for double quotes\")\n",
+    "5. print('''test for triple quotes''') \n",
+    "6.  print(\"  what's up  ?\")"
    ]
   },
   {
@@ -62,10 +73,10 @@
    "id": "aa55e11a",
    "metadata": {},
    "source": [
-    "# 04_Comments\n",
+    "### 04_Comments\n",
     "  -  print(\"how are you?\") #ctrl+/ to comment out\n",
     "  -  print (\"we are learning python with ammar\")\n",
-    "  -  print(2+6) #dggf"
+    "  -  print(2+6)"
    ]
   },
   {
@@ -73,21 +84,21 @@
    "id": "aaf52422",
    "metadata": {},
    "source": [
-    "# 05_ variables\n",
+    "#### 05_ variables\n",
     " - variables are objects containig specific values\n",
-    " - x=5 #numeric variable\n",
+    " - x=5 (example numeric variable)\n",
     " - print(x)\n",
     " - y=\"we are learning pyton drtuui\" #string variable\n",
     " - print(y)\n",
     " - x=123\n",
-    " -print(x)\n",
-    "    # x=x+123+67\n",
-    "    # print(x)\n",
+    " - print(x)\n",
+    "    x=x+123+67\n",
+    "    print(x)\n",
     "    # # types of variables\n",
     "    # type(x)\n",
     "    # print(type(x))\n",
     "    # print(type(y))\n",
-    "## rules to assign  a variable or a object in a variables\n",
+    "#### rules to assign  a variable or a object in a variables\n",
     " - 1= variable should contain letters numbers or underscores\n",
     "- 2=do not start with numbers (ex=2y)\n",
     "- spaces are not allowed\n",
