--- a/Home_work/Final Assignment/Final_Neat_WorkBook.ipynb
+++ b/Home_work/Final Assignment/Final_Neat_WorkBook.ipynb
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 197,
    "id": "206abacc",
    "metadata": {},
    "outputs": [
@@ -1970,7 +1970,7 @@
        "array(['man', 'woman', 'child'], dtype=object)"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,18 +1982,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 199,
    "id": "30ec6296",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['man', 'woman', 'child', 'Third', 'First', 'Second', False, True],\n",
-       "      dtype=object)"
+       "array(['First', 'Second', 'Third', 'child', 'female', 'male', 'man',\n",
+       "       'woman'], dtype=object)"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2001,7 +2001,8 @@
    "source": [
     "## assignments how view unique values of more then one column\n",
     "# pd.unique(ks['survived'])\n",
-    "pd.unique(ks[['who', 'class','alone']].values.ravel('K'))"
+    "# pd.unique(ks[['who', 'class','alone']].values.ravel('K'))\n",
+    "np.unique(ks[['who', 'class','sex']].values)"
    ]
   },
   {
