--- a/Home_work/machine learning/ML_1stType.ipynb
+++ b/Home_work/machine learning/ML_1stType.ipynb
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "x= df[['YearsExperience']]    ## to make 2d just put doble braces\n",
-    "y= df[['Salary']]"
+    "y= df['Salary']"
    ]
   },
   {
