decision tree perfect assignment

--- a/Home_work/machine learning/decsion_tree_classifiers_Homework.ipynb
+++ b/Home_work/machine learning/decsion_tree_classifiers_Homework.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assignment of Decision Tree Classifiers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -87,21 +94,27 @@
        "4   29  164.000    67.0   Male  Biryani"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# import libraries\n",
     "import pandas as pd\n",
     "df= pd.read_csv('mldata1.csv')\n",
     "df.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting Likeness column into dummies"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +152,7 @@
        "      <td>160.0</td>\n",
        "      <td>60.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Pakora</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>241</th>\n",
@@ -147,7 +160,7 @@
        "      <td>172.0</td>\n",
        "      <td>70.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Biryani</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>242</th>\n",
@@ -155,7 +168,7 @@
        "      <td>178.0</td>\n",
        "      <td>80.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Biryani</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243</th>\n",
@@ -163,7 +176,7 @@
        "      <td>5.7</td>\n",
        "      <td>65.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Biryani</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>244</th>\n",
@@ -171,36 +184,45 @@
        "      <td>157.0</td>\n",
        "      <td>56.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Samosa</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     age  height  weight  gender likeness\n",
-       "240   31   160.0    60.0       1   Pakora\n",
-       "241   26   172.0    70.0       1  Biryani\n",
-       "242   40   178.0    80.0       1  Biryani\n",
-       "243   25     5.7    65.0       1  Biryani\n",
-       "244   33   157.0    56.0       0   Samosa"
+       "     age  height  weight  gender  likeness\n",
+       "240   31   160.0    60.0       1         3\n",
+       "241   26   172.0    70.0       1         1\n",
+       "242   40   178.0    80.0       1         1\n",
+       "243   25     5.7    65.0       1         1\n",
+       "244   33   157.0    56.0       0         2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# change bolean operator to dummies\n",
-    "df['gender']= df['gender'].replace('Male',1)\n",
-    "df['gender']= df['gender'].replace('Female',0)\n",
+    "df['likeness']= df['likeness'].replace('Biryani',1)\n",
+    "df['likeness']= df['likeness'].replace('Pakora',3)\n",
+    "df['likeness']= df['likeness'].replace('Samosa',2)\n",
+    "\n",
+    "\n",
     "df.tail()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting  Gender dummies to string"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -224,33 +246,150 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
        "      <th>weight</th>\n",
        "      <th>gender</th>\n",
+       "      <th>likeness</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>27</td>\n",
+       "      <td>170.688</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41</td>\n",
+       "      <td>165.000</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29</td>\n",
+       "      <td>171.000</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27</td>\n",
+       "      <td>173.000</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29</td>\n",
+       "      <td>164.000</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age   height  weight gender  likeness\n",
+       "0   27  170.688    76.0   Male         1\n",
+       "1   41  165.000    70.0   Male         1\n",
+       "2   29  171.000    80.0   Male         1\n",
+       "3   27  173.000   102.0   Male         1\n",
+       "4   29  164.000    67.0   Male         1"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['gender']= df['gender'].replace(1,'Male')\n",
+    "df['gender']= df['gender'].replace(0,'Female')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# predicting the gender using age height weight and likeness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>likeness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27</td>\n",
+       "      <td>170.688</td>\n",
        "      <td>76.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>41</td>\n",
+       "      <td>165.000</td>\n",
        "      <td>70.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>29</td>\n",
+       "      <td>171.000</td>\n",
        "      <td>80.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>27</td>\n",
+       "      <td>173.000</td>\n",
        "      <td>102.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>29</td>\n",
+       "      <td>164.000</td>\n",
        "      <td>67.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -259,29 +398,47 @@
        "</div>"
       ],
       "text/plain": [
-       "   weight  gender\n",
-       "0    76.0       1\n",
-       "1    70.0       1\n",
-       "2    80.0       1\n",
-       "3   102.0       1\n",
-       "4    67.0       1"
+       "   age   height  weight  likeness\n",
+       "0   27  170.688    76.0         1\n",
+       "1   41  165.000    70.0         1\n",
+       "2   29  171.000    80.0         1\n",
+       "3   27  173.000   102.0         1\n",
+       "4   29  164.000    67.0         1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# selection of input and output variables\n",
-    "x = df[['weight', 'gender']]\n",
-    "y = df['likeness']\n",
+    "x = df[['age','height', 'weight', 'likeness']]\n",
+    "y = df['gender']\n",
     "x.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating Model and Prediction through the Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "model= DecisionTreeClassifier()\n",
+    "\n",
+    "model= DecisionTreeClassifier().fit(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -295,128 +452,156 @@
     {
      "data": {
       "text/plain": [
-       "array(['Biryani'], dtype=object)"
+       "array(['Male'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# machine learning algorithm\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "model= DecisionTreeClassifier()\n",
-    "# creat and fit our model\n",
-    "model= DecisionTreeClassifier().fit(x, y)\n",
-    "# model.fit(x, y)\n",
-    "\n",
-    "# prediction\n",
-    "model.predict([[80,1]])"
+    "model.predict([[33,157,66,3]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# checking the accuracy of model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6122448979591837"
+       "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# how to measure the accuracy of our model\n",
-    "###split data into test and train (80/20 rule)\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "x_train, x_test, y_train,y_test=train_test_split(x, y, test_size=0.2, random_state=0)  ### 80% training data 20% test data\n",
-    "\n",
-    "# creat a model\n",
+    "x_train, x_test, y_train,y_test=train_test_split(x, y, test_size=0.2, random_state=1)\n",
     "model= DecisionTreeClassifier()\n",
-    "## fitting a model\n",
-    "model.fit(x_train, y_train)\n",
-    "##prediction values\n",
-    "predicted_values = model.predict(x_test)\n",
-    "predicted_values\n",
-    "## checking score\n",
-    "# y_test= actual values\n",
-    "score= accuracy_score(y_test, predicted_values)\n",
-    "score\n",
-    "\n"
+    "model.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6122448979591837"
+       "array(['Female', 'Male', 'Male', 'Male', 'Male', 'Male', 'Male', 'Female',\n",
+       "       'Male', 'Male', 'Female', 'Female', 'Male', 'Male', 'Male', 'Male',\n",
+       "       'Female', 'Male', 'Male', 'Male', 'Male', 'Male', 'Male', 'Male',\n",
+       "       'Female', 'Male', 'Male', 'Female', 'Male', 'Male', 'Female',\n",
+       "       'Male', 'Female', 'Male', 'Male', 'Male', 'Female', 'Male', 'Male',\n",
+       "       'Female', 'Male', 'Male', 'Female', 'Male', 'Male', 'Male', 'Male',\n",
+       "       'Male', 'Female'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "## checking score\n",
-    "# y_test= actual values\n",
+    "predicted_values = model.predict(x_test)\n",
+    "predicted_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Accuracy of the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7551020408163265"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "score= accuracy_score(y_test, predicted_values)\n",
     "score"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## how to train and save your model\n",
+    "# Saving and Exporting model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Gender.joblib']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "import joblib\n",
     "\n",
     "model = DecisionTreeClassifier().fit(x,y)\n",
     "\n",
-    "joblib.dump(model, \"foodie.joblib\")\n",
-    "model_from_joblib = joblib.load('foodie.joblib') "
+    "joblib.dump(model, \"Gender.joblib\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# visualization of model "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## how to import/run a stored or saved model on our data? assignmment\n",
-    "## how to check accuracy of ourmodel? assignment\n",
-    "## check all four cloumns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## graph\n",
     "from sklearn import tree\n",
     "model= DecisionTreeClassifier().fit(x,y)\n",
     "## graphic evaluation/look nto what happend\n",
     "tree.export_graphviz(model,\n",
-    "                    out_file=\"foodie.dot\",\n",
-    "                    feature_names=['age', 'gender'],\n",
+    "                    out_file=\"Gender.dot\",\n",
+    "                    feature_names=['age', 'weight','height', 'likeness'],\n",
     "                    class_names=sorted(y.unique()),\n",
     "                    label='all',\n",
     "                    rounded= True,\n",
