--- a/Home_work/machine learning/Importing_saved_model.ipynb
+++ b/Home_work/machine learning/Importing_saved_model.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing and Applying Saved Models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +94,7 @@
        "4   29  164.000    67.0   Male  Biryani"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,8 +107,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediction of age using Wieght, height, gender , and likeness"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get dummies from gender and likeness\n",
+    "df['likeness']= df['likeness'].replace('Biryani',1)\n",
+    "df['likeness']= df['likeness'].replace('Pakora',3)\n",
+    "df['likeness']= df['likeness'].replace('Samosa',2)\n",
+    "df['gender']= df['gender'].replace('Male',1)\n",
+    "df['gender']= df['gender'].replace('Female',0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +167,7 @@
        "      <td>160.0</td>\n",
        "      <td>60.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Pakora</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>241</th>\n",
@@ -147,7 +175,7 @@
        "      <td>172.0</td>\n",
        "      <td>70.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Biryani</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>242</th>\n",
@@ -155,7 +183,7 @@
        "      <td>178.0</td>\n",
        "      <td>80.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Biryani</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243</th>\n",
@@ -163,7 +191,7 @@
        "      <td>5.7</td>\n",
        "      <td>65.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Biryani</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>244</th>\n",
@@ -171,36 +199,33 @@
        "      <td>157.0</td>\n",
        "      <td>56.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Samosa</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     age  height  weight  gender likeness\n",
-       "240   31   160.0    60.0       1   Pakora\n",
-       "241   26   172.0    70.0       1  Biryani\n",
-       "242   40   178.0    80.0       1  Biryani\n",
-       "243   25     5.7    65.0       1  Biryani\n",
-       "244   33   157.0    56.0       0   Samosa"
+       "     age  height  weight  gender  likeness\n",
+       "240   31   160.0    60.0       1         3\n",
+       "241   26   172.0    70.0       1         1\n",
+       "242   40   178.0    80.0       1         1\n",
+       "243   25     5.7    65.0       1         1\n",
+       "244   33   157.0    56.0       0         2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# change bolean operator to dummies\n",
-    "df['gender']= df['gender'].replace('Male',1)\n",
-    "df['gender']= df['gender'].replace('Female',0)\n",
     "df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -225,33 +250,45 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>weight</th>\n",
+       "      <th>height</th>\n",
        "      <th>gender</th>\n",
+       "      <th>likeness</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>76.0</td>\n",
+       "      <td>170.688</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>70.0</td>\n",
+       "      <td>165.000</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>80.0</td>\n",
+       "      <td>171.000</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>102.0</td>\n",
+       "      <td>173.000</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>67.0</td>\n",
+       "      <td>164.000</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -259,29 +296,83 @@
        "</div>"
       ],
       "text/plain": [
-       "   weight  gender\n",
-       "0    76.0       1\n",
-       "1    70.0       1\n",
-       "2    80.0       1\n",
-       "3   102.0       1\n",
-       "4    67.0       1"
+       "   weight   height  gender  likeness\n",
+       "0    76.0  170.688       1         1\n",
+       "1    70.0  165.000       1         1\n",
+       "2    80.0  171.000       1         1\n",
+       "3   102.0  173.000       1         1\n",
+       "4    67.0  164.000       1         1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# selection of input and output variables\n",
-    "x = df[['weight', 'gender']]\n",
-    "y = df['likeness']\n",
+    "x = df[['weight','height', 'gender', 'likeness']]\n",
+    "y = df['age']\n",
     "x.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# importing the saved model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "model= DecisionTreeClassifier()\n",
+    "\n",
+    "\n",
+    "import joblib\n",
+    "model_from_joblib = joblib.load('Gender.joblib')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fitting the loaded model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_from_joblib.fit(x,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediction through fitted Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -295,132 +386,44 @@
     {
      "data": {
       "text/plain": [
-       "array(['Biryani'], dtype=object)"
+       "array([27], dtype=int64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# machine learning algorithm\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "model= DecisionTreeClassifier()\n",
-    "# creat and fit our model\n",
-    "model= DecisionTreeClassifier().fit(x, y)\n",
-    "# model.fit(x, y)\n",
-    "\n",
     "# prediction\n",
-    "model.predict([[80,1]])"
+    "model_from_joblib.predict([[80,131,1,3]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Measuring the accuracy of fitted moodel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6122448979591837"
+       "0.9877551020408163"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# how to measure the accuracy of our model\n",
-    "###split data into test and train (80/20 rule)\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "x_train, x_test, y_train,y_test=train_test_split(x, y, test_size=0.2, random_state=0)  ### 80% training data 20% test data\n",
-    "\n",
-    "# creat a model\n",
-    "model= DecisionTreeClassifier()\n",
-    "## fitting a model\n",
-    "model.fit(x_train, y_train)\n",
-    "##prediction values\n",
-    "predicted_values = model.predict(x_test)\n",
-    "predicted_values\n",
-    "## checking score\n",
-    "# y_test= actual values\n",
-    "score= accuracy_score(y_test, predicted_values)\n",
-    "score\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6122448979591837"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "## checking score\n",
-    "# y_test= actual values\n",
-    "score= accuracy_score(y_test, predicted_values)\n",
-    "score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## how to train and save your model\n",
-    "import pandas as pd\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "import joblib\n",
-    "\n",
-    "model = DecisionTreeClassifier().fit(x,y)\n",
-    "\n",
-    "joblib.dump(model, \"foodie.joblib\")\n",
-    "model_from_joblib = joblib.load('foodie.joblib') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## how to import/run a stored or saved model on our data? assignmment\n",
-    "## how to check accuracy of ourmodel? assignment\n",
-    "## check all four cloumns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## graph\n",
-    "from sklearn import tree\n",
-    "model= DecisionTreeClassifier().fit(x,y)\n",
-    "## graphic evaluation/look nto what happend\n",
-    "tree.export_graphviz(model,\n",
-    "                    out_file=\"foodie.dot\",\n",
-    "                    feature_names=['age', 'gender'],\n",
-    "                    class_names=sorted(y.unique()),\n",
-    "                    label='all',\n",
-    "                    rounded= True,\n",
-    "                    filled= True)"
+    "model_from_joblib.score(x,y)\n"
    ]
   }
  ],
