Decision tree visualized

--- a/Home_work/machine learning/decision_tree_classifires.ipynb
+++ b/Home_work/machine learning/decision_tree_classifires.ipynb
@@ -422,6 +422,16 @@
     "                    rounded= True,\n",
     "                    filled= True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import plot_tree\n",
+    "import matplotlib.pyplot as plt"
+   ]
   }
  ],
  "metadata": {
